--- a/sequelize_js/config/config.json
+++ b/sequelize_js/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Kien123456",
+    "password": "PASSWORD",
     "database": "db_dev",
     "host": "127.0.0.1",
     "dialect": "mysql",
